# cg-proj-portal

./: CMakeLists.txt  report.tex
shaders/: default.frag  hud.frag  hud.vert  screen.frag  screen.vert
src/: Application.cpp  Application.h  Button.cpp  Button.h  Camera.cpp  Camera.h  Flip.cpp  Flip.h  FrameBuffer.cpp  FrameBuffer.h  GameMechanics.h  GameObject.cpp  GameObject.h  HUD.cpp  HUD.h  InputManager.cpp  InputManager.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PhysicsSystem.cpp  PhysicsSystem.h  Player.cpp  Player.h  Portal.cpp  Portal.h  PortalGun.h  Renderer.cpp  Renderer.h  Scene.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  Trigger.cpp  Trigger.h  door.cpp  (+2 more)
